--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,17 +3,18 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 .btn {
-  background-color: DodgerBlue;
-  border: none;
-  color: white;
-  padding: 12px 30px;
-  cursor: pointer;
+  background-color: lightgrey;
+  border-radius: 5px;
+  transition: 25ms ease-out;
+  color: black;
+  padding: 0.5em 0.75em;
   font-size: 20px;
+  font-family: Helvetica Neue,Helvetica, Arial, sans-serif
 }
 
 /* Darker background on mouse-over */
 .btn:hover {
-  background-color: RoyalBlue;
+  background-color: grey;
 }
 </style>
 	<!-- This is dynamic code that uses the current page's title to fetch the pdf of the same name.-->
