Updated styles to new version

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,8 +6,8 @@
 
 <!-- Toggleable sidebar -->
 <aside class="sidebar" id="sidebar">
-  <div class="sidebar-slash">/</div>
   <div class="sidebar-item">
+    <div style="font-size: 500%">ICON HERE</div>
     <p>{{ site.description }}</p>
   </div>
 
