updated order of narratives, added spanish text button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,18 @@
 <footer>
 <!-- Add icon library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 	<!-- This is dynamic code that uses the current page's title to fetch the pdf of the same name.-->
 	<!-- <a href="/texts/{{page.title}}.pdf" download="">  -->
 	<a href="/texts/Narrative 1.pdf" download="" class="resp-sharing-button__link">
   		<button class="resp-sharing-button resp-sharing-button--download"><i class="fa fa-download"></i> Download PDF</button> 
  	</a> 
+
+    
+
+    <a href="https://www.reconoci.do/nos-cambio-la-vida-disponible-aqui/" class="resp-sharing-button__link">
+        <button class="resp-sharing-button resp-sharing-button--spanish"><i class="fas fa-book-reader"></i> Leer en Español</button> 
+    </a> 
 
     <!-- Sharingbutton Facebook -->
     <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" target="_blank" rel="noopener" aria-label="Share on Facebook">
