--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,10 +33,7 @@
   <!-- Replace below with our own image -->
   <!-- <meta property="og:image" content="{{ directory_url }}/assets/open-graph-logo.png" /> 
   <meta property="og:image:width" content="200" />
-  <meta property="og:image:height" content="200" />
--->
-<!--   <meta property="fb:admins" content="elotroalex" />
-  <meta property="fb:app_id" content="589495744558280" /> -->
+  <meta property="og:image:height" content="200" />-->
 
 {% if page.layout == "default" %}
   <meta property="og:description" content="{{ site.description }}">
