--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -29,3 +29,13 @@ $accent-color: #CE1126;
 
 @import "ed";
 @import "syntax";
+
+
+/* disable highlighting */
+*.disable-select{
+  user-select:none;
+  -moz-user-select:none;
+  -webkit-user-select:none;
+  -webkit-touch-callout:none;
+  -ms-user-select:none
+}
