Prepping for dev deployment, cleaning up files

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
 <!-- Toggleable sidebar -->
 <aside class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <div style="font-size: 500%">ICON HERE</div>
+    <div><img src="/assets/img/icon@0.5x.png"></div>
     <p>{{ site.description }}</p>
   </div>
 
