--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="page">
+<article disable-select="on" class="page">
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </article>
