Major updates and refinements including social media and open pdf updates

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,9 +47,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css" />
 
   <!-- Icons -->
-  <!-- Replace below with our own image -->
-  <!-- <link rel="apple-touch-icon-precomposed" sizes="180x180" href="{{ site.baseurl }}/assets/apple-touch-icon-precomposed.png" />
-  <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico" /> -->
+  <link rel="icon" sizes="180x180" href="{{ site.baseurl }}/assets/img/icon.png" />
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ directory_url }}/atom.xml" />
