--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,13 @@
     -->
     <div class="wrap">
       <header class="masthead">
-        <div class="container">
-          <h3 class="masthead-title">
-            <a href="{{ site.baseurl }}/" title="Home">{{ site.title | newline_to_br }}</a>
+        <div class="container" id="header">
+          <img src="/assets/img/icon.png">
+          <h3 class="masthead-title">       
+            <a href="{{ site.baseurl }}/toc" title="Home">{{ site.title | newline_to_br }}</a>
             <br><small>{{ site.tagline }}</small>
           </h3>
+          <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="/assets/img/icon.png">
         </div>
       </header>
 
