--- a/_layouts/poem.html
+++ b/_layouts/poem.html
@@ -2,8 +2,11 @@
 layout: default
 ---
 
-<article class="poem poetry">
+<article disable-select="on" class="poem poetry">
   <h1 class="text-title">{{ page.title }}</h1>
-  <p class="byline">{{ page.author }}</p>
+  <p class="byline">by {{ page.author }}</p>
+  <hr>
   {{ content }}
 </article>
+
+{% include footer.html %}
