--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article disable-select="on" class="narrative">
+<article class="narrative">
   <h1 class="text-title">{{ page.title }}</h1>
   <p class="byline">by {{ page.author }}</p>
   <img class="bio-img" src="{{ page.image }}">
