--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,7 @@
 layout: default
 ---
 
-<article disable-select="on" class="page">
+<article class="page">
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
 </article>
-
-{% include footer.html %}
