--- a/_layouts/poem.html
+++ b/_layouts/poem.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article disable-select="on" class="poem poetry">
+<article class="poem poetry">
   <h1 class="text-title">{{ page.title }}</h1>
   <p class="byline">by {{ page.author }}</p>
   <hr>
