updated credits, main image, and re-activated footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,12 +18,12 @@
     <div class="wrap">
       <header class="masthead">
         <div class="container" id="header">
-          <img src="/assets/img/icon.png">
+          <img src="/assets/img/icon.png" alt="phoenix icon">
           <h3 class="masthead-title">       
             <a href="{{ site.baseurl }}/toc" title="Home">{{ site.title | newline_to_br }}</a>
             <br><small>{{ site.tagline }}</small>
           </h3>
-          <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="/assets/img/icon.png">
+          <img style="-webkit-transform: scaleX(-1); transform: scaleX(-1);" src="/assets/img/icon.png" alt="phoenix icon">
         </div>
       </header>
 
@@ -35,6 +35,7 @@
 
 
     <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+    <!-- <button tabindex="0" type="button" for="sidebar-checkbox" class="sidebar-toggle"></button> -->
 
     <script>
 
