--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,7 +47,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css" />
 
   <!-- Icons -->
-  <link rel="icon" sizes="180x180" href="{{ site.baseurl }}/assets/img/icon.png" />
+  <link rel="icon" sizes="180x180" href="{{ site.baseurl }}/assets/img/icon.png" title="phoenix icon"/>
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ directory_url }}/atom.xml" />
