--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
 <!-- Toggleable sidebar -->
 <aside class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <div><img src="/assets/img/icon@0.5x.png"></div>
+    <div><img src="/assets/img/icon@0.5x.png" alt="phoenix icon"></div>
     <p>{{ site.description }}</p>
   </div>
 
@@ -33,10 +33,10 @@
       hypothesis.setAttribute('src','https://hypothes.is/embed.js');
       document.head.appendChild(hypothesis);"><a class="sidebar-nav-item">Annotate edition</a></span>
 
-  <!--
-    <a class="sidebar-nav-item" href="https://via.hypothes.is/{{ site.url }}{{ site.baseurl }}{{page.url}}/" data-proofer-ignore>Annotate me</a>
-    <script src="https://hypothes.is/embed.js" async></script>
-  -->
+  
+<!--     <a class="sidebar-nav-item" href="https://via.hypothes.is/{{ site.url }}{{ site.baseurl }}{{page.url}}/" data-proofer-ignore>Annotate me</a>
+    <script src="https://hypothes.is/embed.js" async></script> -->
+  
 
   </nav>
 
